// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Profile Component Rendering should render all profile sections with correct props 1`] = `
<div
  class="MuiBox-root css-rkfpev"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-v2woy3-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      baz
      , 
      bar
      , 
      foo
      , 
      2024
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-1ydy4ac"
    >
      <div
        class="MuiStack-root css-v2woy3-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1821gv5"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
            data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
          >
            Profile Strength
          </h4>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
            data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            style="--Paper-shadow: var(--mui-shadows-1);"
          >
            <div
              class="MuiCardContent-root css-12ifzbv-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1jkqkm3-MuiTypography-root"
                >
                  0
                  %
                </h5>
                <span
                  aria-label="Profile strength progress"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-pegw78-MuiLinearProgress-root"
                  data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-160qnla"
              >
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Education Skills
                  </p>
                  <span
                    aria-label="Education skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Work & Other Skills
                  </p>
                  <span
                    aria-label="Work skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="career-readiness-progress-banner"
        >
          CareerReadinessProgressBanner: 
          2
           modules
        </div>
      </div>
      <div
        class="MuiStack-root css-en3wmb-MuiStack-root"
      >
        <div
          data-testid="skills-discovered-card"
        >
          SkillsDiscoveredCard: 
          0
           skills, 
          loaded
        </div>
        <div
          class="MuiBox-root css-1821gv5"
        >
          <div
            class="MuiBox-root css-h9yv4t"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
              data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
            >
              Career Pathways
            </h4>
            <button
              class="MuiTypography-root MuiTypography-body2 css-1cn72rn-MuiTypography-root"
              type="button"
            >
              Browse all →
            </button>
          </div>
          <div
            class="MuiBox-root css-rzonq7"
            data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            <div
              class="MuiBox-root css-j7qwjs"
            >
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-0-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-pn0rw6"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⛏️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Mining
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Underground extraction, safety, equipment operation
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-1-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1xg2n7c"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⚡️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Energy
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Power generation, solar, grid maintenance
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-2-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-19xvcpf"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🌾
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Agriculture
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Farming, food processing, agribusiness
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-3-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-ylbmmm"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🏞
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Hospitality & Tourism
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Tourism, hotels, catering, customer service
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-4-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-cjz941"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    💧
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Water & Sanitation
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Water management, sanitation, infrastructure
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-k46aon"
                data-testid="career-explorer-sector-5-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1d1x81w"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🩺
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Health Sciences
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Allied health, diagnostics, pharmacy, physiotherapy
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-o4f5cz"
        >
          <div
            data-testid="security-card"
          >
            SecurityCard: 
            john.doe@example.com
            , 
            loaded
          </div>
          <div
            data-testid="preferences-card"
          >
            PreferencesCard: 
            en
            , 
            loaded
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render correctly with partial data 1`] = `
<div
  class="MuiBox-root css-rkfpev"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-v2woy3-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      John Doe
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-1ydy4ac"
    >
      <div
        class="MuiStack-root css-v2woy3-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1821gv5"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
            data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
          >
            Profile Strength
          </h4>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
            data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            style="--Paper-shadow: var(--mui-shadows-1);"
          >
            <div
              class="MuiCardContent-root css-12ifzbv-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1jkqkm3-MuiTypography-root"
                >
                  0
                  %
                </h5>
                <span
                  aria-label="Profile strength progress"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-pegw78-MuiLinearProgress-root"
                  data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-160qnla"
              >
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Education Skills
                  </p>
                  <span
                    aria-label="Education skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Work & Other Skills
                  </p>
                  <span
                    aria-label="Work skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="career-readiness-progress-banner"
        >
          CareerReadinessProgressBanner: 
          0
           modules
        </div>
      </div>
      <div
        class="MuiStack-root css-en3wmb-MuiStack-root"
      >
        <div
          data-testid="skills-discovered-card"
        >
          SkillsDiscoveredCard: 
          0
           skills, 
          loaded
        </div>
        <div
          class="MuiBox-root css-1821gv5"
        >
          <div
            class="MuiBox-root css-h9yv4t"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
              data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
            >
              Career Pathways
            </h4>
            <button
              class="MuiTypography-root MuiTypography-body2 css-1cn72rn-MuiTypography-root"
              type="button"
            >
              Browse all →
            </button>
          </div>
          <div
            class="MuiBox-root css-rzonq7"
            data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            <div
              class="MuiBox-root css-j7qwjs"
            >
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-0-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-pn0rw6"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⛏️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Mining
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Underground extraction, safety, equipment operation
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-1-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1xg2n7c"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⚡️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Energy
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Power generation, solar, grid maintenance
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-2-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-19xvcpf"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🌾
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Agriculture
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Farming, food processing, agribusiness
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-3-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-ylbmmm"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🏞
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Hospitality & Tourism
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Tourism, hotels, catering, customer service
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-4-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-cjz941"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    💧
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Water & Sanitation
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Water management, sanitation, infrastructure
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-k46aon"
                data-testid="career-explorer-sector-5-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1d1x81w"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🩺
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Health Sciences
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Allied health, diagnostics, pharmacy, physiotherapy
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-o4f5cz"
        >
          <div
            data-testid="security-card"
          >
            SecurityCard: 
            john@example.com
            , 
            loaded
          </div>
          <div
            data-testid="preferences-card"
          >
            PreferencesCard: 
            null
            , 
            loaded
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Profile Component Rendering should render with null data showing 'Not available' 1`] = `
<div
  class="MuiBox-root css-rkfpev"
  data-testid="profile-content-a7f8e4b2-9c3d-4a1e-8f6b-2d3e4a5b6c7d"
>
  <div
    class="MuiStack-root css-v2woy3-MuiStack-root"
  >
    <div
      data-testid="profile-card"
    >
      ProfileCard: 
      null
      , 
      null
      , 
      null
      , 
      null
      , 
      null
      ,
       
      loaded
    </div>
    <div
      class="MuiBox-root css-1ydy4ac"
    >
      <div
        class="MuiStack-root css-v2woy3-MuiStack-root"
      >
        <div
          class="MuiBox-root css-1821gv5"
        >
          <h4
            class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
            data-testid="module-progress-title-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
          >
            Profile Strength
          </h4>
          <div
            class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-b3t7h9-MuiPaper-root-MuiCard-root"
            data-testid="module-progress-card-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
            style="--Paper-shadow: var(--mui-shadows-1);"
          >
            <div
              class="MuiCardContent-root css-12ifzbv-MuiCardContent-root"
            >
              <div
                class="MuiBox-root css-0"
              >
                <h5
                  class="MuiTypography-root MuiTypography-h5 css-1jkqkm3-MuiTypography-root"
                >
                  0
                  %
                </h5>
                <span
                  aria-label="Profile strength progress"
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-pegw78-MuiLinearProgress-root"
                  data-testid="module-progress-0-module-progress-card-b7e3f4a5-8c9d-1e2f-3a4b-5c6d7e8f9a1b"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-160qnla"
              >
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Education Skills
                  </p>
                  <span
                    aria-label="Education skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1a1vzpo"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-18ni0in-MuiTypography-root"
                  >
                    Work & Other Skills
                  </p>
                  <span
                    aria-label="Work skills progress"
                    aria-valuemax="100"
                    aria-valuemin="0"
                    aria-valuenow="0"
                    class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-11t7bkz-MuiLinearProgress-root"
                    role="progressbar"
                  >
                    <span
                      class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-184k4oh-MuiLinearProgress-bar1"
                      style="transform: translateX(-100%);"
                    />
                  </span>
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-lmop9j-MuiTypography-root"
                  >
                    0
                    %
                  </p>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          data-testid="career-readiness-progress-banner"
        >
          CareerReadinessProgressBanner: 
          0
           modules
        </div>
      </div>
      <div
        class="MuiStack-root css-en3wmb-MuiStack-root"
      >
        <div
          data-testid="skills-discovered-card"
        >
          SkillsDiscoveredCard: 
          0
           skills, 
          loaded
        </div>
        <div
          class="MuiBox-root css-1821gv5"
        >
          <div
            class="MuiBox-root css-h9yv4t"
          >
            <h4
              class="MuiTypography-root MuiTypography-h4 css-1msbui-MuiTypography-root"
              data-testid="career-explorer-title-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
            >
              Career Pathways
            </h4>
            <button
              class="MuiTypography-root MuiTypography-body2 css-1cn72rn-MuiTypography-root"
              type="button"
            >
              Browse all →
            </button>
          </div>
          <div
            class="MuiBox-root css-rzonq7"
            data-testid="career-explorer-card-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
          >
            <div
              class="MuiBox-root css-j7qwjs"
            >
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-0-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-pn0rw6"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⛏️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Mining
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Underground extraction, safety, equipment operation
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-1-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1xg2n7c"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    ⚡️
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Energy
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Power generation, solar, grid maintenance
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-2-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-19xvcpf"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🌾
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Agriculture
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Farming, food processing, agribusiness
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-3-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-ylbmmm"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🏞
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Hospitality & Tourism
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Tourism, hotels, catering, customer service
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-11ce1cm"
                data-testid="career-explorer-sector-4-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-cjz941"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    💧
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Water & Sanitation
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Water management, sanitation, infrastructure
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
              <div
                aria-disabled="false"
                class="MuiBox-root css-k46aon"
                data-testid="career-explorer-sector-5-career-explorer-card-d1e2f3a4-5b6c-7d8e-9f0a-1b2c3d4e5f6a"
              >
                <div
                  class="MuiBox-root css-1d1x81w"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body1 css-mv222k-MuiTypography-root"
                  >
                    🩺
                  </p>
                </div>
                <div
                  class="MuiBox-root css-1fjtzvx"
                >
                  <p
                    class="MuiTypography-root MuiTypography-body2 css-16ilwzm-MuiTypography-root"
                  >
                    Health Sciences
                  </p>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1wps13e-MuiTypography-root"
                  >
                    Allied health, diagnostics, pharmacy, physiotherapy
                  </span>
                </div>
                <div
                  class="MuiBox-root css-gzz3ze"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-8qu4nc-MuiSvgIcon-root"
                    data-testid="ChevronRightIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6 8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root css-o4f5cz"
        >
          <div
            data-testid="security-card"
          >
            SecurityCard: 
            null
            , 
            loaded
          </div>
          <div
            data-testid="preferences-card"
          >
            PreferencesCard: 
            null
            , 
            loaded
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
